# Jupiter2Robot_ROS2_Project

./: README.md  latency_log.tsv
src/exp1/src/: exp1.tsv  exp1_google_sr.py  exp1_google_sr.tsv  exp1_sr.py  exp1_vosk.py  experiment1_metrics.tsv  experiment1_with_metrics.py
src/jupiterobot2_arm_description/: CMakeLists.txt  package.xml
src/jupiterobot2_arm_description/urdf/: jupiterobot2_arm.urdf.xacro  jupiterobot2_arm.xacro
src/jupiterobot2_description/: CMakeLists.txt  package.xml
src/jupiterobot2_description/launch/: display.launch.py  gazebo.launch.py
src/jupiterobot2_description/urdf/: astra_pro_camera.urdf.xacro  jupiter2_gazebo.xacro  jupiter2_gazebo_multi_camera.xacro  jupiter2_pro.urdf.xacro
src/jupiterobot2_gazebo/: CMakeLists.txt  package.xml
src/jupiterobot2_gazebo/launch/: gazebo.launch.py  jupiterobot2_world.launch
src/jupiterobot2_gazebo/worlds/: jupiter.world
src/jupiterobot2_head_description/: CMakeLists.txt  package.xml
src/jupiterobot2_head_description/urdf/: camera_top.urdf.xacro
src/latency_test/: package.xml  setup.cfg  setup.py
src/latency_test/latency_test/: listener_latency_logger.py  talker_latency.py
