<?xml version="1.0"?>
<package format="3">
  <name>jupiterobot2_description</name>
  <version>0.0.0</version>
  <description>Jupiter 2 robot description package</description>

  <maintainer email="support@jupiterobot.com">Jupiter Robot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 client libraries -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- Messages -->
  <exec_depend>std_msgs</exec_depend>

  <!-- Robot description -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
