<?xml version="1.0"?>
<package format="3">
  <name>jupiterobot2_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulation for Jupiter 2 (ROS 2)</description>

  <maintainer email="you@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>jupiterobot2_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

