<?xml version="1.0"?>
<package format="3">
  <name>jupiterobot2_head_description</name>
  <version>0.0.0</version>
  <description>Jupiter 2 head description</description>

  <maintainer email="support@jupiterobot.com">Jupiter Robot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

